--- a/_posts/2024-02-28-finalcpt.md
+++ b/_posts/2024-02-28-finalcpt.md
@@ -25,7 +25,7 @@ CPT Requirements
 | ---------------- | ----------- |
 | Instructions for input from one of the following: the user, a device, an online data stream, a file. | My feature had input from the user as they clicked on the different answers for the 6 question quiz. |
 | Use of at least one list (or other collection type) to represent a collection of data that is stored and used to manage program complexity and help fulfill the users purpose. | I had a list of questions.|
-| At least one procedure that contributed to the program’s intended purpose where you have defined: the name, return type, one or more parameters: |<img src="https://ibb.co/3MzW03b" alt=""> |
+| At least one procedure that contributed to the program’s intended purpose where you have defined: the name, return type, one or more parameters: | https://ibb.co/3MzW03b |
 | Instructions for output based on input | The code calculates how many answers for each type of location like city national park or tropical were chosen, and based on that finds which category had the most answers from the user to recommend that as a destination. |
 
 Video
